--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- Spinner End -->
 
 <!-- tim roi start-->
-<div class="snowflakes" aria-hidden="true">
+<!-- <div class="snowflakes" aria-hidden="true">
     <div class="snowflake">💖</div>
     <div class="snowflake">💝</div>
     <div class="snowflake">❤️️</div>
@@ -58,8 +58,8 @@
     <div class="snowflake">💝</div>
     <div class="snowflake">❤️</div>
     <div class="snowflake">💓</div>
-  </div>
-<!-- tim roi end-->
+  </div> -->
+<!-- tim roi end -->
 
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0">
