--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
       href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Icon Font Stylesheet -->
     <link
@@ -131,14 +135,14 @@
             id="choice4"
             onclick="changeChoice(event)"
             href="#album-anh-cuoi"
-            class="nav-item nav-link"
+            class="item nav-item nav-link"
             >Album ảnh cưới</a
           >
           <a
             id="choice5"
             onclick="changeChoice(event)"
             href="#cau-chuyen"
-            class="nav-item nav-link"
+            class="item nav-item nav-link"
             >Câu chuyện</a
           >
         </nav>
@@ -538,9 +542,9 @@
           <div class="my-2 wow fadeIn text-center" data-wow-delay="0.3s">
             <h1 style="color: #ab7442">CÂU CHUYỆN TÌNH YÊU</h1>
           </div>
-          <div class="row g-4 portfolio-container">
+          <div class="row g-4">
             <div
-              class="col-lg-6 col-md-6 portfolio-item first wow fadeInUp"
+              class="col-lg-5 col-md-5 portfolio-item first wow fadeInUp"
               data-wow-delay="0.3s"
             >
               <div class="rounded overflow-hidden">
@@ -551,11 +555,25 @@
                     src="img/KhungAvatarRe.png"
                     alt=""
                   />
+                  <span></span>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-2 col-md-2 fadeInUp" data-wow-delay="0.3s">
+              <div class="rounded">
+                <div class="demngay text-center">
+                  <img
+                    class="img-tim my-4"
+                    width="300"
+                    src="img/Traitim.png"
+                    alt=""
+                  />
+                  <div id="ngay-yeu"></div>
                 </div>
               </div>
             </div>
             <div
-              class="col-lg-6 col-md-6 portfolio-item second wow fadeInUp"
+              class="col-lg-5 col-md-5 portfolio-item second wow fadeInUp"
               data-wow-delay="0.3s"
             >
               <div class="rounded overflow-hidden">
@@ -569,6 +587,82 @@
                 </div>
               </div>
             </div>
+          </div>
+          <div class="col-lg-12 col-md-12 cauchuyenty wow fadeInUp">
+            &nbsp;&nbsp;&nbsp;&nbsp;"Tôi" và "em" là những con người xa lạ, một
+            người ở Quảng Bình, một người ở Huế. Vậy điều gì đã khiến chúng tôi
+            gặp nhau? Mọi việc cứ đến như là nó phải xảy ra vậy,
+            <b>thật tuyệt vời!</b>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;"Tôi" là một kỹ sư, ra trường và đi làm
+              được 3 năm, còn "em" là một hướng dẫn viên du lịch cũng đã đi làm
+              được 6 năm. Nhưng chúng tối có một điểm chung đó là muốn thử tìm
+              hiểu và làm một lĩnh vực khác để xem có phù hợp với bản thân và
+              tương lai không. Và điểm chung đó đã tạo điều kiện để chúng tôi
+              gặp nhau.
+            </p>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;Ngày 01/10/2022 là ngày trọng đại đầu tiên
+              trong câu chuyện này, là cột mốc chứng kiến một tình yêu trọn vẹn
+              sau những khoảng thời gian chôn dấu ^-^. Thật tuyệt khi bạn yêu
+              một người và người ấy cũng yêu bạn!
+            </p>
+            <div class="row">
+              <div class="col-lg-10 col-md-10">
+                &nbsp;&nbsp;&nbsp;&nbsp; Tôi phát hiện ra hai đứa có khá nhiều
+                sở thích chung. Chúng tôi học tập cùng nhau, đi du lịch với
+                nhau, xem phim cùng nhau, làm việc thiện với nhau. Hạnh phúc là
+                làm những điều mình thích với người mình thích mà cũng thích
+                những điều mình thích @.@
+              </div>
+              <div class="col-lg-2 col-md-2">
+                <img width="200" src="img/Luv16.jpg" alt="" />
+              </div>
+            </div>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;Nhưng ngọt ngào đến mấy thì cũng phải có
+              những lúc trầm lặng. Khoảng thời gian "tôi" và "em" thực sự bên
+              nhau chỉ tính bằng ngày, ngắn nhất thì 2 ngày, dài nhất thì 5
+              ngày, khoảng thời gian lâu nhất bên "em" là lúc 2 đứa đi du lịch
+              với nhau. -_-. Chúng tôi yêu xa! Đã có những lúc tủi thân đến mức
+              muốn buông bỏ.
+            </p>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;Rồi "tôi" và "em" vẫn cùng nhau vượt qua
+              tất cả, để rồi:
+            </p>
+            <div class="row">
+              <div class="col-lg-2 col-md-2">
+                <img width="200" src="img/cauhon.jpg" alt="" />
+              </div>
+              <div class="col-lg-10 col-md-10">
+                &nbsp;&nbsp;&nbsp;&nbsp; Ngày 04/02/2024 là một trong những cột
+                mốc tiếp theo. Đó là ngày "tôi" cầu hôn "em" (nhưng mà tôi thấy
+                nó không giống như trong phim lắm ^.^). Do you wanna marry me?
+                Yes, I do!
+              </div>
+            </div>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;Lúc đó thực sự "tôi" đã nghĩ, có khi nào
+              "em" lắc đầu không. May là điều đó không xảy ra ^_^.
+            </p>
+            <div class="row">
+              <div class="col-lg-8 col-md-8">
+                &nbsp;&nbsp;&nbsp;&nbsp; Ngày 19/02/2024, ngày mà 2 gia đình
+                chính thức gặp mặt, trao đổi chuyện tương lai của "tôi" và "em".
+                Mọi việc diễn ra khá thuận lợi và thống nhất ngày mà "tôi" và
+                "em" sẽ chính thức về một nhà.
+              </div>
+              <div class="col-lg-4 col-md-4">
+                <img width="300" src="img/damngo1.jpg" alt="" />
+              </div>
+            </div>
+            <a href="#my-wedding">
+              Lễ cưới sẽ diễn ra vào
+            </a>
+            <p>
+              &nbsp;&nbsp;&nbsp;&nbsp;Còn tiếp...
+            </p>
           </div>
         </div>
       </div>
@@ -785,8 +879,6 @@
         var ten = document.getElementById("nhapten").value;
         var loichuc = document.getElementById("loichuc").value;
 
-        console.log(ten, loichuc);
-
         Email.send({
           Host: "smtp.elasticemail.com",
           Username: "tranngoctrung1496@gmail.com",
@@ -797,9 +889,10 @@
           Body: ten + "-" + loichuc,
         }).then((message) =>
           Swal.fire({
-            title: "Lời chúc của "+ten+ " đã được gửi",
+            title: "Lời chúc của " + ten + " đã được gửi",
             text: "Chúng tôi xin chân thành cám ơn",
-            imageUrl: "https://i.pinimg.com/originals/51/e5/8c/51e58c603af1422fedd5176d5058ef7a.jpg",
+            imageUrl:
+              "https://i.pinimg.com/originals/51/e5/8c/51e58c603af1422fedd5176d5058ef7a.jpg",
             imageWidth: 400,
             imageHeight: 200,
             imageAlt: "Custom image",
@@ -840,6 +933,16 @@
       }, 1000);
       //]]>
     </script>
+
+    <script>
+      const loveTime = new Date("10/01/2022 00:00:00").getTime();
+      const nowTime = new Date().getTime();
+      const demNgayYeu = nowTime - loveTime;
+      const ngayYeu = Math.floor(demNgayYeu / (1000 * 60 * 60 * 24));
+
+      document.getElementById("ngay-yeu").innerText = ngayYeu + 1;
+    </script>
+
     <script>
       // Get the modal
       var modal = document.getElementById("myModal");
@@ -868,27 +971,16 @@
       };
     </script>
     <script>
-      let choice = "choice1";
-      function changeChoice(event) {
-        document.getElementById("choice1").classList.remove("active");
-        document.getElementById("choice2").classList.remove("active");
-        document.getElementById("choice3").classList.remove("active");
-        document.getElementById("choice4").classList.remove("active");
-        document.getElementById("choice5").classList.remove("active");
-        document.getElementById("choice6").classList.remove("active");
-        const element = document.getElementById(event.target.id);
-        element.classList.add("active");
-      }
-
-      const input = document.getElementById("chonanh");
-      const image = document.getElementById("img-preview");
-
-      input.addEventListener("change", (e) => {
-        if (e.target.files.length) {
-          const src = URL.createObjectURL(e.target.files[0]);
-          image.src = src;
+      function removeActive() {
+        var aa = document.getElementsByClassName("nav-item");
+        for (let index = 0; index < aa.length; index++) {
+          aa[index].classList.remove("active");
         }
-      });
+      }
+      function changeChoice(event) {
+        removeActive();
+        document.getElementById(event.target.id).classList.add("active");
+      }
     </script>
   </body>
 </html>
