--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <div class="my-2 wow fadeIn text-center" data-wow-delay="0.3s">
             <h1 style="color: #ab7442">CÂU CHUYỆN TÌNH YÊU</h1>
           </div>
-          <div class="row g-4">
+          <div class="row g-4" style="align-items: center;">
             <div
               class="col-lg-5 col-md-5 portfolio-item first wow fadeInUp"
               data-wow-delay="0.3s"
@@ -555,22 +555,14 @@
                     src="img/KhungAvatarRe.png"
                     alt=""
                   />
-                  <span></span>
                 </div>
               </div>
             </div>
-            <div class="col-lg-2 col-md-2 fadeInUp" data-wow-delay="0.3s">
-              <div class="rounded">
-                <div class="demngay text-center">
-                  <img
-                    class="img-tim my-4"
-                    width="300"
-                    src="img/Traitim.png"
-                    alt=""
-                  />
-                  <div id="ngay-yeu"></div>
-                </div>
-              </div>
+            <div
+              class="col-lg-2 col-md-2 portfolio-item second wow fadeInUp text-center"
+              data-wow-delay="0.3s"
+            >
+              <div id="ngay-yeu"></div>
             </div>
             <div
               class="col-lg-5 col-md-5 portfolio-item second wow fadeInUp"
@@ -608,14 +600,14 @@
               một người và người ấy cũng yêu bạn!
             </p>
             <div class="row">
-              <div class="col-lg-10 col-md-10">
+              <div class="col-lg-10 col-md-12">
                 &nbsp;&nbsp;&nbsp;&nbsp; Tôi phát hiện ra hai đứa có khá nhiều
                 sở thích chung. Chúng tôi học tập cùng nhau, đi du lịch với
                 nhau, xem phim cùng nhau, làm việc thiện với nhau. Hạnh phúc là
                 làm những điều mình thích với người mình thích mà cũng thích
                 những điều mình thích @.@
               </div>
-              <div class="col-lg-2 col-md-2">
+              <div class="col-lg-2 col-md-12 text-center">
                 <img width="200" src="img/Luv16.jpg" alt="" />
               </div>
             </div>
@@ -632,10 +624,10 @@
               tất cả, để rồi:
             </p>
             <div class="row">
-              <div class="col-lg-2 col-md-2">
+              <div class="col-lg-2 col-md-12 text-center">
                 <img width="200" src="img/cauhon.jpg" alt="" />
               </div>
-              <div class="col-lg-10 col-md-10">
+              <div class="col-lg-10 col-md-12">
                 &nbsp;&nbsp;&nbsp;&nbsp; Ngày 04/02/2024 là một trong những cột
                 mốc tiếp theo. Đó là ngày "tôi" cầu hôn "em" (nhưng mà tôi thấy
                 nó không giống như trong phim lắm ^.^). Do you wanna marry me?
@@ -647,22 +639,18 @@
               "em" lắc đầu không. May là điều đó không xảy ra ^_^.
             </p>
             <div class="row">
-              <div class="col-lg-8 col-md-8">
+              <div class="col-lg-8 col-md-12">
                 &nbsp;&nbsp;&nbsp;&nbsp; Ngày 19/02/2024, ngày mà 2 gia đình
                 chính thức gặp mặt, trao đổi chuyện tương lai của "tôi" và "em".
                 Mọi việc diễn ra khá thuận lợi và thống nhất ngày mà "tôi" và
                 "em" sẽ chính thức về một nhà.
               </div>
-              <div class="col-lg-4 col-md-4">
+              <div class="col-lg-4 col-md-12 text-center">
                 <img width="300" src="img/damngo1.jpg" alt="" />
               </div>
             </div>
-            <a href="#my-wedding">
-              Lễ cưới sẽ diễn ra vào
-            </a>
-            <p>
-              &nbsp;&nbsp;&nbsp;&nbsp;Còn tiếp...
-            </p>
+            <a href="#my-wedding"> Lễ cưới sẽ diễn ra vào </a>
+            <p>&nbsp;&nbsp;&nbsp;&nbsp;Còn tiếp...</p>
           </div>
         </div>
       </div>
