--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
                 <img width="300" src="img/damngo1.jpg" alt="" />
               </div>
             </div>
-            <a href="#my-wedding"> Lễ cưới sẽ diễn ra vào </a>
+            <a href="#" class="on-top"> Lễ cưới sẽ diễn ra vào </a>
             <p>&nbsp;&nbsp;&nbsp;&nbsp;Còn tiếp...</p>
           </div>
         </div>
