--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             onclick="changeChoice(event)"
             href="#my-wedding"
             class="nav-item nav-link active"
-            >Our Wedding</a
+            >Đám cưới của chúng tôi</a
           >
           <a
             id="choice2"
@@ -136,7 +136,7 @@
             onclick="changeChoice(event)"
             href="#album-anh-cuoi"
             class="item nav-item nav-link"
-            >Album ảnh cưới</a
+            >Ảnh cưới</a
           >
           <a
             id="choice5"
@@ -470,7 +470,7 @@
       <div class="container-xxl py-5">
         <div class="container">
           <div class="my-2 wow fadeIn text-center" data-wow-delay="0.3s">
-            <h1 style="color: #ab7442">ALBUM ẢNH CƯỚI</h1>
+            <h1 style="color: #ab7442">ẢNH CƯỚI</h1>
           </div>
           <div class="row g-4">
             <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.2s">
