--- a/index.html
+++ b/index.html
@@ -692,12 +692,12 @@
               class="my-3"
               width="200"
               style="border-radius: 10px"
-              src="img/MyQR.jpg"
+              src="img/QRHang.jpg"
               alt="Quét mã gửi mừng cưới"
             />
-            <p style="font-weight: 700">Ngân hàng Quân đội MB Bank</p>
-            <p style="font-weight: 700">5210101041996</p>
-            <p style="font-weight: 700">TRAN NGOC TRUNG</p>
+            <p style="font-weight: 700">Ngân hàng TMCP Kỹ Thương Việt Nam</p>
+            <p style="font-weight: 700">19035920466019</p>
+            <p style="font-weight: 700">DINH PHAN THI KHANH HANG</p>
           </div>
           <div class="col-lg-3 col-md-6">
             <h5
@@ -814,14 +814,14 @@
                 class="my-3"
                 width="200"
                 style="border-radius: 10px"
-                src="img/MyQR.jpg"
+                src="img/QRHang.jpg"
                 alt="Quét mã gửi mừng cưới"
               />
               <p style="color: #ab7442; font-weight: 700">
-                Ngân hàng Quân đội MB Bank
+                Ngân hàng TMCP Kỹ Thương Việt Nam
               </p>
-              <p style="color: #ab7442; font-weight: 700">5210101041996</p>
-              <p style="color: #ab7442; font-weight: 700">TRAN NGOC TRUNG</p>
+              <p style="color: #ab7442; font-weight: 700">19035920466019</p>
+              <p style="color: #ab7442; font-weight: 700">DINH PHAN THI KHANH HANG</p>
             </div>
           </div>
         </div>
